# wilbrand-rust

./: Cargo.toml  README.md  justfile
.github/workflows/: deploy.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
docs/: envelope.md
lib/: Cargo.toml
lib/src/: consts.rs  error.rs  lib.rs  payload.rs  types.rs
lib/tests/: bin_diff.rs
lib/tests/bins/: README.md
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: mac-address-input.tsx
ui/src/lib/: generate.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  logger.rs
wasm/tests/: output.rs
