[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
lib = { path = "../lib" }
log = "0.4.29"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempdir = "0.3.7"